testsuite/bsc.driver/gensign/DupVar.bsv

export x;
export x;
export x;

Bool x = True;

